--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Animation</title>
+    <title>Snake Snake Snake</title>
     <style>
         body {
             margin: 0;
